--- a/config.json
+++ b/config.json
@@ -34,7 +34,7 @@
       "username": "430381200112220018",
       "password": "220018",
       "location": "112.911927,28.357961",
-      "email": "853726664@qq.com",
+      "email": "",
       "place": "中国-湖南省-长沙市-望城区"
     },
     {
@@ -49,14 +49,14 @@
       "password": "125413",
       "location": "112.911927,28.357961",
       "place": "中国-湖南省-长沙市-望城区",
-      "email": "853726664@qq.com"
+      "email": ""
     },
     {
       "username": "432524200011300014",
       "password": "300014",
       "location": "112.911927,28.357961",
       "place": "中国-湖南省-长沙市-望城区",
-      "email": "853726664@qq.com"
+      "email": ""
     }
   ],
   "sender_email": "853726664@qq.com",
