--- a/config.json
+++ b/config.json
@@ -41,6 +41,34 @@
       "accept_language": "zh-cn",
       "accept_encoding": "gzip, deflate, br",
       "content_type": "application/json;charset=UTF-8"
+    },
+    {
+      "user_agent": "iqooZ1,3(Android/11) Uninview(Uninview/1.0.0) Weex/0.26.0 1080x1920",
+      "accept": "*/*",
+      "accept_language": "zh-cn",
+      "accept_encoding": "gzip, deflate, br",
+      "content_type": "application/json;charset=UTF-8"
+    },
+    {
+      "user_agent": "xiaomi9,3(Android/11) Uninview(Uninview/1.0.0) Weex/0.26.0 1080x1920",
+      "accept": "*/*",
+      "accept_language": "zh-cn",
+      "accept_encoding": "gzip, deflate, br",
+      "content_type": "application/json;charset=UTF-8"
+    },
+    {
+      "user_agent": "xiaomi10,3(Android/11) Uninview(Uninview/1.0.0) Weex/0.26.0 1080x1920",
+      "accept": "*/*",
+      "accept_language": "zh-cn",
+      "accept_encoding": "gzip, deflate, br",
+      "content_type": "application/json;charset=UTF-8"
+    },
+    {
+      "user_agent": "xiaomi11,3(Android/11) Uninview(Uninview/1.0.0) Weex/0.26.0 1080x1920",
+      "accept": "*/*",
+      "accept_language": "zh-cn",
+      "accept_encoding": "gzip, deflate, br",
+      "content_type": "application/json;charset=UTF-8"
     }
   ],
   "user": [
@@ -82,6 +110,34 @@
     {
       "username": "430481199905019699",
       "password": "019699",
+      "location": "112.911927,28.357961",
+      "place": "中国-湖南省-长沙市-望城区",
+      "email": ""
+    },
+    {
+      "username": "20205074",
+      "password": "274541",
+      "location": "112.911927,28.357961",
+      "place": "中国-湖南省-长沙市-望城区",
+      "email": ""
+    },
+    {
+      "username": "431028200112292030",
+      "password": "292030",
+      "location": "112.911927,28.357961",
+      "place": "中国-湖南省-长沙市-望城区",
+      "email": ""
+    },
+    {
+      "username": "15973474091",
+      "password": "221661",
+      "location": "112.911927,28.357961",
+      "place": "中国-湖南省-长沙市-望城区",
+      "email": ""
+    },
+    {
+      "username": "17873712996",
+      "password": "032912",
       "location": "112.911927,28.357961",
       "place": "中国-湖南省-长沙市-望城区",
       "email": ""
