--- a/config.json
+++ b/config.json
@@ -69,6 +69,20 @@
       "accept_language": "zh-cn",
       "accept_encoding": "gzip, deflate, br",
       "content_type": "application/json;charset=UTF-8"
+    },
+    {
+      "user_agent": "iphoneX,3(IOS/13) Uninview(Uninview/1.0.0) Weex/0.26.0 1080x1920",
+      "accept": "*/*",
+      "accept_language": "zh-cn",
+      "accept_encoding": "gzip, deflate, br",
+      "content_type": "application/json;charset=UTF-8"
+    },
+    {
+      "user_agent": "iphoneXR,3(IOS/13) Uninview(Uninview/1.0.0) Weex/0.26.0 1080x1920",
+      "accept": "*/*",
+      "accept_language": "zh-cn",
+      "accept_encoding": "gzip, deflate, br",
+      "content_type": "application/json;charset=UTF-8"
     }
   ],
   "user": [
@@ -138,6 +152,20 @@
     {
       "username": "430921200009032912",
       "password": "032912",
+      "location": "112.911927,28.357961",
+      "place": "中国-湖南省-长沙市-望城区",
+      "email": ""
+    },
+    {
+      "username": "350881200108121516",
+      "password": "121516",
+      "location": "112.911927,28.357961",
+      "place": "中国-湖南省-长沙市-望城区",
+      "email": ""
+    },
+    {
+      "username": "430524200211082435",
+      "password": "082435",
       "location": "112.911927,28.357961",
       "place": "中国-湖南省-长沙市-望城区",
       "email": ""
