--- a/config.json
+++ b/config.json
@@ -110,8 +110,8 @@
     {
       "username": "432524200011300014",
       "password": "300014",
-      "location": "112.911927,28.357961",
-      "place": "中国-湖南省-长沙市-望城区",
+      "location": "111.283932,27.750951",
+      "place": "中国-湖南省-娄底市-新化县",
       "email": ""
     },
     {
