--- a/config.json
+++ b/config.json
@@ -138,8 +138,8 @@
     {
       "username": "430407200108274541",
       "password": "274541",
-      "location": "112.911927,28.357961",
-      "place": "中国-湖南省-长沙市-望城区",
+      "location": "112.605058,26.938597",
+      "place": "中国-湖南省-衡阳市-石鼓区",
       "email": ""
     },
     {
@@ -178,8 +178,8 @@
       "email": ""
     },
     {
-      "username": "20203859",
-      "password": "231248",
+      "username": "431028200112292030",
+      "password": "292030",
       "location": "113.277 543，26.474449",
       "place": "中国-湖南省-郴州市-安仁县",
       "email": ""
