--- a/config.json
+++ b/config.json
@@ -103,8 +103,8 @@
     {
       "username": "431226200012122438",
       "password": "122438",
-      "location": "112.911927,28.357961",
-      "place": "中国-湖南省-长沙市-望城区",
+      "location": "109.811827,27.849381",
+      "place": "中国-湖南省-怀化市-麻阳苗族自治县",
       "email": ""
     },
     {
